add_executable(loadlifev loadlifev.cpp)
add_executable(use_lifev_wrappers use_lifev_wrappers.cpp)
target_link_libraries(loadlifev ${PROJECT_BINARY_DIR}/libpyorb-lifev-api.so ${LINKED_LIBRARIES} )
target_link_libraries(use_lifev_wrappers ${PROJECT_BINARY_DIR}/libpyorb-lifev-api.so ${LINKED_LIBRARIES} )
add_test(loadlifev_test loadlifev)
add_test(use_lifev_wrappers_test use_lifev_wrappers)
